--- a/blog/templates/blog/categoryindex.html
+++ b/blog/templates/blog/categoryindex.html
@@ -16,7 +16,7 @@
             
          
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {% for post in posts %}
+            {% for post in categorylist.posts %}
            
             <div class="col">
               <div class="card shadow-sm">
