--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -3,7 +3,10 @@
 
 
 {% block content %}
-   Here
+<form method="post" action="{% url 'remove-profile' %}">
+   {% csrf_token %}
+   <button type="submit">delete account</button>
+</form>
    {{profile.email}}
 {% endblock %}
 
