--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,6 +10,27 @@
 {% endblock %}
 
 {% block content %}
+<header class="masthead text-center text-white">
+  <div class="masthead-content">
+      <div class="container px-5">
+          <h1 class="masthead-heading mb-0">One Page Wonder</h1>
+          <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
+          <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+      </div>
+  </div>
+  <div class="bg-circle-1 bg-circle"></div>
+  <div class="bg-circle-2 bg-circle"></div>
+  <div class="bg-circle-3 bg-circle"></div>
+  <div class="bg-circle-4 bg-circle"></div>
+</header>
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1>I am John Doe</h1>
+    <p>And I'm a Photographer</p>
+    <button>Hire me</button>
+  </div>
+</div>
    
 
     <section class="py-5 text-center container">
