--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,15 +1,29 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
 
 {% block content %}
+<div>
+    <label >Make</label>
+    <select name="make" hx-get="{% url 'products' %}" hx-target="#prod-list" hx-indicator=".htmx-indicator">
+        <option value="reset">Sort by...</option>
+        <option value="price_asc">Price (low to high)</option>
+        <option value="price_desc" >Price (high to low)</option>
+        <option value="rating_asc" >Rating (low to high)</option>
+        <option value="rating_desc" >Rating (high to low)</option>
+        <option value="name_asc" >Name (A-Z)</option>
+        <option value="name_desc" >Name (Z-A)</option>
+       
+    </select>
+  </div>
+  <div id="prod-list">
+    {% for p in sorted_products %}
+    {{ p.name }}
+    {% endfor %}
+    {% include "products/snippets/product-list.html" %}
+</div>
+
+
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
@@ -118,41 +132,5 @@
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
-        <a class="btt-link d-flex h-100">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-        </a>	
-    </div>
-{% endblock %}
-
-{% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript">
-		$('.btt-link').click(function(e) {
-			window.scrollTo(0,0)
-		})
-	</script>
-    
-    <script type="text/javascript">
-        $('#sort-selector').change(function() {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
-
-            var selectedVal = selector.val();
-            if(selectedVal != "reset"){
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
-
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
-
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
-
-                window.location.replace(currentUrl);
-            }
-        })
-    </script>
+   
 {% endblock %}
