--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -111,7 +111,13 @@
        
      <li> <a href="{% url 'search_page' %}" class="nav-link px-2"><i class="bi bi-search"></i> Search  </a> </li>
 
-     <li><a href="#" class="nav-link px-2"> Cart: <i class="bi bi-bag-fill"></i> €3.99 </a> </li>
+     <li><a href="{% url 'view_bag' %}" class="nav-link px-2"> Cart: <i class="bi bi-bag-fill"></i> 
+      {% if grand_total %}
+      ${{ grand_total|floatformat:2 }}
+  {% else %}
+      $0.00
+  {% endif %}
+    </a> </li>
       </ul>
     </div>
    
