--- a/blog/templates/blog/blogindex.html
+++ b/blog/templates/blog/blogindex.html
@@ -19,8 +19,8 @@
            
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+               
+                <img src="{{ post.image.url }}" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">{{post.title}}</p>
                   <div class="d-flex justify-content-between align-items-center">
