--- a/blog/templates/blog/blogindex.html
+++ b/blog/templates/blog/blogindex.html
@@ -22,16 +22,11 @@
                
                 <img src="{{ post.image.url }}" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">{{post.title}}</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a href="{{ post.get_absolute_url }}">Link</a>
-                      HERE
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View Post</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                    </div>
-                    <small class="text-muted">{{post.category}}</small>
+                  <h3 class="card-text">{{post.title}}</h3>
+                  <div class="d-grid align-items-center">
+                    <a href="{{ post.get_absolute_url }}" class="mt-3 stretched-link btn btn-outline-dark">Read Post</a>
+                   
+                  
                   </div>
                 </div>
               </div>
