--- a/blog/templates/blog/categoryindex.html
+++ b/blog/templates/blog/categoryindex.html
@@ -20,18 +20,14 @@
            
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+               
+                <img src="{{ post.image.url }}" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">{{post.title}}</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                     
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View Post</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                    </div>
-                    <small class="text-muted">{{post.category}}</small>
+                  <h3 class="card-text">{{post.title}}</h3>
+                  <div class="d-grid align-items-center">
+                    <a href="{{ post.get_absolute_url }}" class="mt-3 stretched-link btn btn-outline-dark">Read Post</a>
+                   
+                  
                   </div>
                 </div>
               </div>
