--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,12 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load cloudinary %}
 {% block page_header %}
-<div class="container header-container">
-  <div class="row">
-    <div class="col"></div>
-  </div>
-</div>
+
 {% endblock %}
 
 {% block content %}
